fix: button color and spacing

--- a/src/app/[locale]/incident/add/components/MapDialog.css
+++ b/src/app/[locale]/incident/add/components/MapDialog.css
@@ -22,11 +22,11 @@
 }
 
 .map-button {
-  padding-bottom: 16px !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0.75em !important;
 }
 
 .map-icon-button {
@@ -36,20 +36,24 @@
 }
 
 .map-icon-button.mobile {
-  padding: var(--basis-space-text-md) ;
+  padding: var(--basis-space-text-md);
   max-inline-size: fit-content;
 }
 
 
-.map-icon-button.mobile > .utrecht-icon  {
+.map-icon-button.mobile > .utrecht-icon {
   inset-block: 0 !important;
 }
 
 .map-close-button {
   position: absolute;
-  right: 1em;
-  top: 1em;
+  top: 0.5em;
+  right: 0.5em;
   gap: 0 !important;
+}
+
+.map-button .utrecht-icon {
+  inset-block: 0 !important;
 }
 
 .map-zoom-button-group {
